--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -295,16 +295,16 @@
 <body>
     <div class="container">
         <header>
-            <h1>🎓 PAS Gateway</h1>
+            <h1>PAS Gateway</h1>
             <p>Sistema de Gerenciamento Acadêmico - UNIFOR</p>
         </header>
         
         <nav>
-            <a href="{% url 'core:index' %}">🏠 Início</a>
-            <a href="{% url 'core:discentes_list' %}">👨‍🎓 Discentes</a>
-            <a href="{% url 'core:disciplinas_list' %}">📚 Disciplinas</a>
-            <a href="{% url 'core:livros_list' %}">📖 Biblioteca</a>
-            <a href="{% url 'core:sincronizar_dados' %}">🔄 Sincronizar</a>
+            <a href="{% url 'core:index' %}">Início</a>
+            <a href="{% url 'core:discentes_list' %}">Discentes</a>
+            <a href="{% url 'core:disciplinas_list' %}">Disciplinas</a>
+            <a href="{% url 'core:livros_list' %}">Biblioteca</a>
+            <a href="{% url 'core:sincronizar_dados' %}">Sincronizar</a>
         </nav>
         
         <div class="content">
